feat(vconfig): toggle dropdown